--- a/public/templates/admin_grocery.template.html
+++ b/public/templates/admin_grocery.template.html
@@ -35,8 +35,10 @@
         <td><input type="button" ng-click="$ctrl.main.editModal(groc.id,
                                                             groc.name,
                                                             groc.price,
+                                                            groc.vendor,
                                                             groc.min_quantity,
                                                             groc.max_quantity,
+                                                            groc.description,
                                                             groc.type)"
                    value="Редагувати"
                    data-toggle="modal"
