--- a/public/templates/basket.template.html
+++ b/public/templates/basket.template.html
@@ -3,5 +3,10 @@
 
         <ngcart-cart></ngcart-cart>
 
+        <ngcart-checkout service="http" settings="{ url:'/checkout' }"></ngcart-checkout>
+
+
+
+
     </div>
 </div>
