--- a/public/templates/home.template.html
+++ b/public/templates/home.template.html
@@ -15,7 +15,7 @@
                 продукти дали нам змогу стати лідером цих індустрій, постійно розвиваючи їх.</p>
             <ul>
                 <li>
-                    <a href="#"><img src="images/pic3.jpg" alt="" class="left" /></a>
+                    <a href="#"><img src="/images/background/1.jpg" alt="" class="left" /></a>
                     <h3>Wines у нашому житті,
                         поліпшення повсякденних умов</h3>
                     <p>Wines незмінно ділиться з людьми по всьому світу своїм перетворюючим досвідом,
@@ -24,7 +24,7 @@
                         ми прагнемо поліпшити життя людей і привнести позитивні зміни в оточуючий світ.</p>
                 </li>
                 <li>
-                    <a href="#"><img src="images/pic4.jpg" alt="" class="left" /></a>
+                    <a href="#"><img src="/images/background/2.jpg" alt="" class="left" /></a>
                     <h3>Внесок Wines,
                         незмінна соціальна відповідальність</h3>
                     <p>Ми вимірюємо свої успіхи не лише досягненнями в бізнесі, а й тим,
@@ -33,6 +33,10 @@
                         відповідальність за те, щоб створити позитивний корпоративний імідж й
                         усюди в світі діяти на благо суспільного прогресу, оберігати та
                         покращувати довкілля, а також зміцнювати соціальні стандарти.</p>
+                    <h3>Взаємне сприяння</h3>
+                    <p>Бізнес не буває успішним, якщо не веде до процвітання і відкриття можливостей для інших.
+                        Компанія Wines прагне бути соціально та екологічно відповідальним корпоративним
+                        громадянином у кожній спільноті, де ми ведемо свою діяльність, на всій земній кулі.</p>
                 </li>
             </ul>
         </section>
@@ -40,14 +44,9 @@
     </div>
     <div class="col-md-6">
         <article>
-            <h2>Ще один пост</h2>
-            <a href="#">33 comments</a>
-            <a href="#"><img src="images/pic6.jpg" alt="" class="top" /></a>
-            <h3>Взаємне сприяння</h3>
-            <p>Бізнес не буває успішним, якщо не веде до процвітання і відкриття можливостей для інших.
-                Компанія Wines прагне бути соціально та екологічно відповідальним корпоративним
-                громадянином у кожній спільноті, де ми ведемо свою діяльність, на всій земній кулі.</p>
-            <a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
+            <h2>Новий дизайн</h2>
+            <a href="#"><img src="/images/background/6.jpg" alt="" class="top" /></a>
+            <a href="#"><img src="/images/background/5.jpg" alt="" class="left" /></a>
             <h3>Wines створює можливості,
                 корпорація відкриттів</h3>
             <p>Наша мета проста: це надання вам свободи подорожувати, відкривати для себе
@@ -56,9 +55,6 @@
                 люди змінюються швидше. Ми незмінно прагнемо відкриттів та новаторства,
                 створення технологій і надання послуг, які роблять нас сильнішими та
                 відкривають двері у світ можливого.</p>
-            <footer>
-                <a href="#" class="button">Продовжити</a>
-            </footer>
         </article>
 
     </div>
