change price depends on quantity of products

--- a/public/templates/admin_grocery.template.html
+++ b/public/templates/admin_grocery.template.html
@@ -39,7 +39,8 @@
                                                             groc.min_quantity,
                                                             groc.max_quantity,
                                                             groc.description,
-                                                            groc.type)"
+                                                            groc.type,
+                                                            groc.price_dependencies)"
                    value="Редагувати"
                    data-toggle="modal"
                    data-target="#edit_request"
