--- a/public/templates/products_grocery.template.html
+++ b/public/templates/products_grocery.template.html
@@ -41,7 +41,8 @@
                                   price="{{ item.price }}"
                                   quantity="{{ item.min_quantity }}"
                                   quantity-min="{{ item.min_quantity }}"
-                                  quantity-max="{{ item.max_quantity }}">
+                                  quantity-max="{{ item.max_quantity }}"
+                                  discount="{{ item.price_dependencies }}">
                     Add to Cart
                 </ngcart-addtocart>
             </div>
