--- a/public/templates/products_grocery_caviar.template.html
+++ b/public/templates/products_grocery_caviar.template.html
@@ -34,7 +34,8 @@
                               price="{{ caviar.price }}"
                               quantity="{{ caviar.min_quantity }}"
                               quantity-min="{{ caviar.min_quantity }}"
-                              quantity-max="{{ caviar.max_quantity }}">
+                              quantity-max="{{ caviar.max_quantity }}"
+                              discount="{{ caviar.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
