--- a/public/templates/products_grocery_cheese.template.html
+++ b/public/templates/products_grocery_cheese.template.html
@@ -34,7 +34,8 @@
                               price="{{ che.price }}"
                               quantity="{{ che.min_quantity }}"
                               quantity-min="{{ che.min_quantity }}"
-                              quantity-max="{{ che.max_quantity }}">
+                              quantity-max="{{ che.max_quantity }}"
+                              discount="{{ che.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
