--- a/public/templates/products_grocery_coffee.template.html
+++ b/public/templates/products_grocery_coffee.template.html
@@ -34,7 +34,8 @@
                               price="{{ coff.price }}"
                               quantity="{{ coff.min_quantity }}"
                               quantity-min="{{ coff.min_quantity }}"
-                              quantity-max="{{ coff.max_quantity }}">
+                              quantity-max="{{ coff.max_quantity }}"
+                              discount="{{ coff.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
