--- a/public/templates/products_grocery_macaroni.template.html
+++ b/public/templates/products_grocery_macaroni.template.html
@@ -34,7 +34,8 @@
                               price="{{ mac.price }}"
                               quantity="{{ mac.min_quantity }}"
                               quantity-min="{{ mac.min_quantity }}"
-                              quantity-max="{{ mac.max_quantity }}">
+                              quantity-max="{{ mac.max_quantity }}"
+                              discount="{{ mac.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
