--- a/public/templates/products_grocery_olive_oil.template.html
+++ b/public/templates/products_grocery_olive_oil.template.html
@@ -34,7 +34,8 @@
                               price="{{ oil.price }}"
                               quantity="{{ oil.min_quantity }}"
                               quantity-min="{{ oil.min_quantity }}"
-                              quantity-max="{{ oil.max_quantity }}">
+                              quantity-max="{{ oil.max_quantity }}"
+                              discount="{{ oil.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
