--- a/public/template/ngCart/addtocart.html
+++ b/public/template/ngCart/addtocart.html
@@ -6,8 +6,9 @@
                 <input type="number" name="quantity"  min="{{ quantityMin }}" max="{{ quantityMax }}"
                        id="quantity" step="{{ quantityMin }}" ng-model="q" required>
                 <input type="submit" class="btn buttonAdd" data-toggle="modal" data-target="#submit_request"
-                   ng-disabled="addProduct.quantity.$invalid"
-                   ng-click="ngCart.addItem(id, name, price, q, quantityMin, quantityMax, data)"
+                   ng-disabled="addProduct.quantity.$invalid ||
+                                !q"
+                   ng-click="ngCart.addItem(id, name, price, q, quantityMin, quantityMax, discount, data)"
                    value="Купити" ng-transclude>
             </span>
         </form>
