--- a/public/templates/detailed.template.html
+++ b/public/templates/detailed.template.html
@@ -3,11 +3,10 @@
     <span class="glyphicon glyphicon-chevron-left"></span> Назад</span>
     <img ng-src="{{$ctrl.main.path + 'get_image/' + $ctrl.product.id}}" id="detailedPicture" alt="No picture"/>
     <article>
-        <p>Цена зависит от количества:</p>
-        <p>- от 8   шт.      - 63,00 грн.</p>
-        <p>- от 16 шт.      - 60,00 грн.</p>
-        <p>- от 40 шт.      - 58,00 грн.</p>
-        <p>- от 80 шт.      - 56,00 грн.</p>
+        <p ng-if="$ctrl.product.price_dependencies[0]">Цена зависит от количества:</p>
+        <ul ng-repeat="x in $ctrl.product.price_dependencies">
+            <li> от {{x.quantity}} шт. - {{x.price}} грн.</li>
+        </ul>
     </article>
 </div>
 
@@ -29,13 +28,14 @@
         </li>
         <li>
             Замовити:
-            <div id="detailedPageCart">
+            <div id="detailedPageCart" ng-init="$ctrl.product.min_quantity">
                 <ngcart-addtocart id="{{ $ctrl.product.id }}"
                                   name="{{ $ctrl.product.name }}"
                                   price="{{ $ctrl.product.price }}"
-                                  quantity="{{ $ctrl.product.min_quantity }}"
+                                  quantity="{{ quantity }}"
                                   quantity-min="{{ $ctrl.product.min_quantity }}"
-                                  quantity-max="{{ $ctrl.product.max_quantity }}">
+                                  quantity-max="{{ $ctrl.product.max_quantity }}"
+                                  discount="{{ $ctrl.product.price_dependencies }}">
                     Add to Cart
                 </ngcart-addtocart>
             </div>
