--- a/public/templates/products.template.html
+++ b/public/templates/products.template.html
@@ -46,7 +46,8 @@
                                 price="{{ item.price }}"
                                 quantity="{{ item.min_quantity }}"
                                 quantity-min="{{ item.min_quantity }}"
-                                quantity-max="{{ item.max_quantity }}">
+                                quantity-max="{{ item.max_quantity }}"
+                                discount="{{ item.price_dependencies }}">
                                 Add to Cart
             </ngcart-addtocart>
         </div>
