--- a/public/templates/products_wines_semisweet.template.html
+++ b/public/templates/products_wines_semisweet.template.html
@@ -32,7 +32,8 @@
                               price="{{ wine.price }}"
                               quantity="{{ wine.min_quantity }}"
                               quantity-min="{{ wine.min_quantity }}"
-                              quantity-max="{{ wine.max_quantity }}">
+                              quantity-max="{{ wine.max_quantity }}"
+                              discount="{{ wine.price_dependencies }}">
                 Add to Cart
             </ngcart-addtocart>
         </div>
