--- a/resources/assets/sass/main.css
+++ b/resources/assets/sass/main.css
@@ -466,6 +466,10 @@ legend.scheduler-border {
     border-color: #006600;
 }
 
+.modal-footer {
+    border: none !important;
+}
+
 #cartCheckout {
     border: 1px solid white;
 }
